Cannot search default sources
Copy https://bugzilla.redhat.com/show_bug.cgi?id=1879106
Description of problem: The search option in "add input source" is not working properly.
Version-Release number of selected component (if applicable): Fedora-33
Steps to Reproduce:
- Go to the settings --> region and language -- > input sources
- Go to add input source(+)
- try to search(:) some language specific input source. For example hangul(Korean), Intelligent pinyin(Chinese) , typing booster, Cangjie(chinese hong kong)
Actual results:
- Search will work for some input sources like typing booster( it will give "other") but it does not work for some input like hangul. intelligent pinyin, cangjie etc
Expected results:
- The search should give proper results for all.