region: Search default input sources

The default input sources are not included in layout_rows_by_id or
engine_rows_by_id but in default_input_source_row of GtkListBoxRow.

https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/1131